# mi_aiedam_model

./: README.md  pyproject.toml
analysis/: tis_comparison_example.py  tis_example.py
data/: pi.txt
expts/: best_case.py  getting_started.py  workshop_demand.py  worst_case.py
src/model/: _base_agent.py  broker.py  clock.py  enums.py  job.py  logics.py  machine.py  typings.py
